Remove guava dependency from testing-common (#13676)